--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.demoewallet.app">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
+        android:name="com.example.demoewallet.app.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:name="com.example.demoewallet.app.App"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GiantScanLite"
         tools:targetApi="31">
+
+        <activity
+            android:name="com.example.demoewallet.app.ImportWalletActivity"
+            android:exported="false" />
+
+        <activity
+            android:name="com.example.demoewallet.app.CreateWalletActivity"
+            android:exported="false" />
 
         <activity
             android:name="com.example.demoewallet.app.MainActivity"
