--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,21 +5,25 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <application
         android:name="com.example.demoewallet.app.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/wificoin_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/wificoin_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.GiantScanLite"
         tools:targetApi="31">
 
         <activity
             android:name="com.example.demoewallet.app.ImportWalletActivity"
+            android:exported="false" />
+
+        <activity
+            android:name="com.example.demoewallet.app.WalletAddressActivity"
             android:exported="false" />
 
         <activity
