--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,7 @@
 rootProject.name = "GiantScanLite"
 include ':app'
+include ':core-api'
+include ':test-shared'
+include ':common'
+include ':runtime'
+include ':core-db'
